--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:name=".RecipeWriteActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".SearchActivity"/>
+        <activity android:name=".SearchResult"/>
         <activity android:name=".UserPageActivity"/>
 
 
