--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <!-- 포그라운드 서비스 권한 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
@@ -33,7 +32,9 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".SearchResult"/>
         <activity android:name=".UserPageActivity"/>
-
+        <activity
+            android:name=".RecipeDetailActivity"
+            android:exported="false" />
 
 
     </application>
