--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <application
         android:hardwareAccelerated="true"
         android:allowBackup="true"
@@ -32,6 +36,7 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".SearchResult"/>
         <activity android:name=".UserPageActivity"/>
+        <activity android:name=".NicknameSetupActivity"/>
         <activity
             android:name=".RecipeDetailActivity"
             android:exported="false" />
