--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,13 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore    
+MYAPP_RELEASE_STORE_PASSWORD=202505
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_KEY_PASSWORD=202505
+
+MYAPP_DEBUG_STORE_FILE=new-debug.keystore
+MYAPP_DEBUG_STORE_PASSWORD=202505
+MYAPP_DEBUG_KEY_ALIAS=debugKey
+MYAPP_DEBUG_KEY_PASSWORD=202505
