--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity
             android:name=".RecipeDetailActivity"
             android:exported="false" />
+        <activity android:name=".RecipeReadActivity" />
 
 
     </application>
