--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:hardwareAccelerated="true"
@@ -41,6 +42,9 @@
             android:name=".RecipeDetailActivity"
             android:exported="false" />
         <activity android:name=".RecipeReadActivity" />
+        <service
+            android:name=".VoiceRecognitionService"
+            android:exported="false" />
 
 
     </application>
