북마크 기능 및 레시피 종료화면 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity android:name=".CookWrite01Activity"/>
         <activity android:name=".CookWrite02Activity"/>
         <activity android:name=".CookWrite03Activity"/>
+        <activity
+            android:name=".BookmarkActivity"
+            android:exported="false" />
         <service
             android:name=".VoiceRecognitionService"
             android:enabled="true"
