--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
         <activity
             android:name=".TitleListActivity"
             android:exported="false" />
+        <activity
+            android:name=".RecipeEditActivity"
+            android:exported="false" />
         <service
             android:name=".VoiceRecognitionService"
             android:enabled="true"
