--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
         <activity android:name=".weather.LocationActivity" android:exported="false"/>
         <activity android:name=".weather.AirQualityActivity" android:exported="false"/>
         <activity android:name=".weather.WeatherActivity" android:exported="false" />
+        <activity android:name=".ui.recipe.write.CategorySelectionActivity" />
 
         <service
             android:name=".service.VoiceRecognitionService"
