--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity android:name=".weather.AirQualityActivity" android:exported="false"/>
         <activity android:name=".weather.WeatherActivity" android:exported="false" />
         <activity android:name=".ui.recipe.write.CategorySelectionActivity" />
+        <activity android:name=".ui.recipe.search.SearchScreenActivity"/>
 
         <service
             android:name=".service.VoiceRecognitionService"
