--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,15 +48,14 @@
         <activity android:name=".ui.auth.RegisterActivity" />
         <activity android:name=".ui.recipe.search.SearchResult"/>
         <activity android:name=".ui.user.UserPageActivity"/>
-        <activity android:name=".ui.user.LikedRecipesActivity" />
         <activity android:name=".ui.auth.NicknameSetupActivity"/>
+        <activity
+            android:name=".ui.recipe.read.RecipeDetailActivity"
+            android:exported="false" />
         <activity android:name=".ui.recipe.read.RecipeReadActivity" />
-        <activity android:name=".ui.recipe.read.RecipeDetailActivity" />
         <activity android:name=".ui.recipe.write.CookWrite01Activity"/>
         <activity android:name=".ui.recipe.write.CookWrite02Activity"/>
         <activity android:name=".ui.recipe.write.CookWrite03Activity"/>
-        <activity android:name=".ui.review.MyReviewsActivity"/>
-        <activity android:name=".ui.review.ReviewWriteActivity"/>
         <activity
             android:name=".ui.user.bookmark.BookmarkActivity"
             android:exported="false" />
@@ -80,13 +79,14 @@
         <activity android:name=".weather.LocationActivity" android:exported="false"/>
         <activity android:name=".weather.AirQualityActivity" android:exported="false"/>
         <activity android:name=".weather.WeatherActivity" android:exported="false" />
-        <activity android:name=".ui.recipe.write.CategorySelectionActivity" />
-        <activity android:name=".ui.recipe.search.SearchScreenActivity"/>
+
+        <activity android:name=".CategoryPageActivity" />
 
         <service
             android:name=".service.VoiceRecognitionService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="microphone" />
+
     </application>
 </manifest>
