--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,8 +81,6 @@
         <activity android:name=".weather.AirQualityActivity" android:exported="false"/>
         <activity android:name=".weather.WeatherActivity" android:exported="false" />
         <activity android:name=".CategoryPageActivity" />
-        <activity android:name=".ui.recipe.write.CategorySelectionActivity"/>
-
         <activity
             android:name=".ui.review.ReviewWriteActivity"
             android:exported="false" />
@@ -98,6 +96,7 @@
         <activity
             android:name=".ui.notification.NotificationActivity"
             android:exported="false" />
+        <activity android:name=".ChangePasswordActivity"/>
 
         <service
             android:name=".service.VoiceRecognitionService"
