인기 레시피 로직 구현, 마이페이지 칭호 안 보이는 거 수정, 마에피이지 작성한 팁, 좋아요한 팁 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,8 @@
         <activity
             android:name=".ui.tip.CookTipDetailActivity"
             android:exported="false" />
+        <activity android:name=".ui.tip.MyTipsActivity" />
+        <activity android:name=".ui.tip.LikedTipsActivity" />
 
         <activity
             android:name=".ui.notification.NotificationActivity"
