마이페이지 - 알레르기 설정, 알림 설정 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,8 @@
             android:exported="false" />
         <activity android:name=".ChangePasswordActivity"/>
         <activity android:name=".ui.user.RecentlyViewedRecipesActivity"/>
+        <activity android:name=".ui.user.AllergySettingsActivity"/>
+        <activity android:name=".ui.user.NotificationSettingsActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
