앱 아이콘 추가, 리뷰 사진 보이게 수정, 글 쓰기에서 재료, 조리도구 추가 부분 UI/로직 개선, 레시피 수정 UI 개선, 마이페이지 아이콘 개선, 조회수 로직 변경(1번 증가 후 24시간 뒤에 다시 증가하게끔), 오늘의 인기 레시피 로직 변경(24시간 내 조회수가 높은 레시피 우선)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.review.PhotoViewActivity"
+            android:theme="@style/Theme.AppCompat.Transparent.NoActionBar" />
+
         <service
             android:name=".service.VoiceRecognitionService"
             android:enabled="true"
