요리하기 페이지 UI 개선(타이머 포함), 검색창 디자인 개선, 검색창 요리 목록에서 사진 크기 감소, 글 작성시 간단 소개, 재료 입력 필수로 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,10 +109,14 @@
         <activity
             android:name=".ui.notification.NotificationActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.recipe.read.AllStepsActivity"
+            android:exported="false" />
         <activity android:name=".ChangePasswordActivity"/>
         <activity android:name=".ui.user.RecentlyViewedRecipesActivity"/>
         <activity android:name=".ui.user.AllergySettingsActivity"/>
         <activity android:name=".ui.user.NotificationSettingsActivity"/>
+
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
